<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaf"
    app:circularflow_radiusInDP="16dp">

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="#F8F5EF"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/_10_common_plant_diseases"
        android:textColor="#106992"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/btnDiagnosis"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="#F8F6F0"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/request_a_diagnosis"
        android:textColor="#16739B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/btnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FBFBF9"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textColor="#146F99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_plant_doctor"
        android:textColor="#0D0D0D"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <ImageView
        android:id="@+id/imgStethoscope"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/an_icon_of_a_stethoscope"
        app:layout_constrainedHeight="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/stethoscopeimg" />

</androidx.constraintlayout.widget.ConstraintLayout>